crates/uitest/fixtures/ty_check/error_event_conflict.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/error_event_conflict.fe
---
error[16-0005]: `#[error]` cannot be combined with `#[event]`
  ┌─ error_event_conflict.fe:2:1
  │
2 │ #[error]
  │ ^^^^^^^^ `#[error]` conflicts with `#[event]` on the same struct
  │
  = split this into separate structs or remove one attribute
